--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           cache: pnpm
       - run: pnpm install --frozen-lockfile --prefer-offline
-      - run: pnpm build
+      - run: pnpm build --base=/lyon-available-rooms/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
