--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - 'main'
+env:
+  VITE_CLIENT_ID: ${{ secrets.VITE_CLIENT_ID }}
+  VITE_REDIRECT_URI: ${{ vars.VITE_REDIRECT_URI }}
 
 jobs:
   build:
